added the header, footer, and tidied up some lines

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <li class="dropdown">
               PROJECTS
               <div class="dropdown-content">
-                <a href="#" class="font-light text-sm">Biodata</a>
-                <a href="#" class="font-light text-sm">Contact Us</a>
-                <a href="#" class="font-light text-sm">Additional Page</a>
-                <a href="#" class="font-light text-sm">Free Content</a>
+                <a href="biodata.html" class="font-light text-sm">Biodata</a>
+                <a href="contact_us.html" class="font-light text-sm">Contact Us</a>
+                <a href="posts.html" class="font-light text-sm">Posts</a>
+                <a href="freepage.html" class="font-light text-sm">Free Page</a>
               </div>
             </li>
           </ul>
@@ -141,7 +141,7 @@
           <ul class="p-2 space-y-1">
             <li>
               <a
-                href="Biodata\biodata.html"
+                href="biodata.html"
                 class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
               >
                 Biodata
@@ -149,7 +149,7 @@
             </li>
             <li>
               <a
-                href="contact_us\contact_us.html"
+                href="contact_us.html"
                 class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
               >
                 Contact Us
@@ -157,7 +157,7 @@
             </li>
             <li>
               <a
-                href="additional_page\posts.html"
+                href="posts.html"
                 class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
               >
                 Additional Page
