--- a/contact_us.html
+++ b/contact_us.html
@@ -33,20 +33,55 @@
           class="container flex sm:items-left lg:flex-row lg:items-center lg:justify-between font-bold py-5"
         >
           <!-- Navigation Menu -->
+          <!-- Navigation Menu -->
           <div class="hidden lg:block px-8">
             <ul class="list-none flex flex-row gap-20 text-lg">
-              <li class="dropdown">
-                BRAND
+              <li class="dropdown relative">
+                <span class="inline-block">
+                  BRAND
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-4 w-4 text-gray-700 inline-block"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    style="margin-left: 4px"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19 9l-7 7-7-7"
+                    />
+                  </svg>
+                </span>
                 <div class="dropdown-content">
                   <a href="#" class="font-light text-sm">Jiwa Group</a>
                 </div>
               </li>
-              <li class="dropdown">
-                PROJECTS
+              <li class="dropdown relative">
+                <span class="inline-block">
+                  PROJECTS
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-4 w-4 text-gray-700 inline-block"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    style="margin-left: 4px"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19 9l-7 7-7-7"
+                    />
+                  </svg>
+                </span>
                 <div class="dropdown-content">
                   <a href="biodata.html" class="font-light text-sm">Biodata</a>
-                  <a href="contact_us.html" class="font-light text-sm"
-                    >Contact Us</a
+                  <a href="index.html" class="font-light text-sm"
+                    >Index</a
                   >
                   <a href="posts.html" class="font-light text-sm">Posts</a>
                   <a href="freepage.html" class="font-light text-sm"
@@ -70,17 +105,55 @@
           <div class="hidden lg:block">
             <ul class="flex flex-row gap-10 text-lg">
               <li>JIWA+</li>
-              <li class="dropdown">
-                CORPORATE
+              <li class="dropdown relative">
+                <span class="inline-block">
+                  CORPORATE
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-4 w-4 text-gray-700 inline-block"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    style="margin-left: 4px"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19 9l-7 7-7-7"
+                    />
+                  </svg>
+                </span>
                 <div class="dropdown-content">
-                  <a href="#" class="font-light text-sm">About Us</a>
-                  <a href="#" class="font-light text-sm">Career</a>
-                  <a href="#" class="font-light text-sm">Contact</a>
-                  <a href="#" class="font-light text-sm">ESG</a>
+                  <a href="biodata.html" class="font-light text-sm">Biodata</a>
+                  <a href="index.html" class="font-light text-sm"
+                    >Index</a
+                  >
+                  <a href="posts.html" class="font-light text-sm">Posts</a>
+                  <a href="freepage.html" class="font-light text-sm"
+                    >Free Page</a
+                  >
                 </div>
               </li>
-              <li class="dropdown">
-                ACCOUNT
+              <li class="dropdown relative">
+                <span class="inline-block">
+                  ACCOUNT
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-4 w-4 text-gray-700 inline-block"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    style="margin-left: 4px"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19 9l-7 7-7-7"
+                    />
+                  </svg>
+                </span>
                 <div class="dropdown-content">
                   <p>Login to</p>
                 </div>
@@ -154,12 +227,12 @@
                   href="posts.html"
                   class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
                 >
-                  Posts
+                  Additional Page
                 </a>
               </li>
               <li>
                 <a
-                  href="freepage.html"
+                  href="free_content\freepage.html"
                   class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
                 >
                   Free Content
