added the hero section for introducing myself, hobbies, and skills

--- a/biodata.html
+++ b/biodata.html
@@ -237,138 +237,227 @@
       </div>
     </header>
 
-    <footer class="bg-gray-100 pt-10">
-        <div
-          class="max-w-7xl mx-auto flex flex-wrap lg:flex-nowrap justify-between px-5 lg:px-10 lg:py-8 gap-8"
-        >
-          <!-- Left Section -->
-          <div class="lg:w-1/4 text-left lg:text-left">
-            <img
-              src="Index/Logos/jiwa-logo.png"
-              alt="janji-jiwa-logo"
-              class="h-10 align-start lg:mx-0 mb-4"
-            />
-            <hr class="border-2 border-lime-500 w-14 align-start lg:mx-0" />
-            <p class="pt-2 text-gray-500">PT Luna Boga Narayan</p>
-            <h3 class="font-bold pt-4 text-green-900">Hubungi Kami</h3>
-            <p class="flex align-start text-gray-500 gap-2">
-              <i class="material-icons text-green-800">mail_outline</i
-              >info@jiwagroup.com
-            </p>
-            <p class="flex align-start items-center text-gray-500 gap-2">
-              <i class="material-icons text-green-800">place</i>
-              Jl. Kedoya Raya No.2 Kota Jakarta Barat, <br />Daerah Khusus Ibukota
-              Jakarta 11520
-            </p>
-            <div class="flex align-start pt-5 gap-20 lg:gap-4">
-              <button
-                class="socmed-button border-2 border-green-700 py-1 px-5 hover:bg-green-700 hover:text-white flex items-center gap-2"
-              >
-                <i class="fa fa-youtube-play"></i>
-                <a href="#">YouTube</a>
-              </button>
-              <button
-                class="socmed-button border-2 border-green-700 py-1 px-5 hover:bg-green-700 hover:text-white flex items-center gap-2"
-              >
-                <i class="fa fa-instagram"></i>
-                <a href="#">Instagram</a>
-              </button>
-            </div>
-          </div>
-  
-          <div class="flex justify-between lg:gap-40 gap-16">
-            <!-- Middle Left Section -->
-            <div class="w-full lg:w-1/4 lg:text-left">
-              <ul class="footer-brands">
-                <li class="text-green-900 mb-3 font-bold">BRAND</li>
-                <li class="text-gray-500">Kopi Sejuta Jiwa</li>
-                <li class="text-gray-500">Burger Geber</li>
-                <li class="text-gray-500">Jiwa Tea</li>
-                <li class="text-gray-500">Janji Jiwa</li>
-              </ul>
-            </div>
-  
-            <!-- Middle Right Section -->
-            <div class="w-full lg:w-1/4 text-center lg:text-left">
-              <ul class="footer-jiwa+">
-                <li class="text-green-900 mb-3 font-bold">JIWA+</li>
-                <li class="text-gray-500">Download Sekarang</li>
-                <li class="flex justify-center lg:justify-start mt-2 gap-2">
-                  <div class="flex flex-col lg:gap-2">
-                    <img
-                      src="Index/index pictures/misc/app-apple.png"
-                      class="h-8"
-                    />
-                    <img
-                      src="Index/index pictures/misc/app-google.png"
-                      class="h-8"
-                    />
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-  
-          <!-- Right Section -->
-          <div class="w-full lg:w-1/4 text-center lg:text-left">
-            <ul class="footer-partnership font-bold">
-              <li class="text-green-900 mb-3">PARTNERSHIP</li>
-              <div
-                class="partnership-border bg-green-800 text-white p-4 rounded-md"
-              >
-                <li class="mb-3 text-sm">
-                  Let's become a partner and build the<br />perfect product
-                </li>
-                <li>
-                  <button
-                    class="bg-white text-green-900 px-5 py-2 rounded-md border border-green-900 hover:bg-teal-500 hover:text-white transition ease-in-out duration-200"
-                  >
-                    Become A Partner
-                  </button>
-                </li>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </footer>
-  
-      <div class="w-full bg-gray-200 py-5 mt-0">
-        <div
-          class="max-w-7xl mx-auto flex flex-wrap justify-between items-center px-5 lg:px-10 text-sm text-gray-600"
-        >
-          <!-- Copyright Text -->
-          <p class="w-full lg:w-auto text-center lg:text-left mb-4 lg:mb-0">
-            © 2024 Jiwa Group. All rights reserved.
+    <section
+      class="bg-[#2F3E34] text-gray-100 dark:bg-[#1E2823] dark:text-gray-300 pt-28 pb-8"
+    >
+      <div
+        class="max-w-screen-xl mx-auto px-4 lg:px-12 grid lg:grid-cols-12 gap-8 items-center"
+      >
+        <!-- Left Content -->
+        <div class="lg:col-span-7">
+          <h1 class="text-4xl md:text-5xl font-bold mb-4">
+            Hello, I’m Joyada Okomoto!
+          </h1>
+          <p class="text-lg md:text-xl font-light mb-6">
+            I’m an Undergraduate Student, exploring web development. This
+            project showcases my attempt to clone the *Janji Jiwa* website,
+            build an interactive biodata page, experiment with fetching APIs,
+            and lain lain.
           </p>
-  
-          <!-- University Links -->
-          <div
-            class="w-full lg:w-auto flex flex-col lg:flex-row lg:items-center gap-4 text-center lg:text-left"
+          <a
+            href="#projects"
+            class="inline-block px-6 py-3 bg-green-600 text-white font-medium text-lg rounded-md shadow-md hover:bg-green-700 transition"
           >
-            <h4 class="font-semibold text-gray-800">Visit Our University:</h4>
-            <ul class="flex flex-col lg:flex-row gap-4">
-              <li>
-                <a
-                  href="https://fti.unai.edu/"
-                  class="text-green-700 hover:underline"
-                  >IT Faculty</a
-                >
-              </li>
-              <li>
-                <a href="https://unai.edu/" class="text-green-700 hover:underline"
-                  >University of Advent Indonesia</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://jurnal.unai.edu/index.php/teika"
-                  class="text-green-700 hover:underline"
-                  >Journal</a
-                >
-              </li>
-            </ul>
-          </div>
+            This button doesnt work
+          </a>
+        </div>
+        <!-- Right Image -->
+        <div class="lg:col-span-5">
+          <img
+            src="Index\pictures\IMG_4280.JPG"
+            alt="A picture of myself"
+            class="rounded-lg shadow-md w-full"
+          />
         </div>
       </div>
+    </section>
+
+    <!-- Hobbies Section -->
+    <section
+      class="max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 flex items-center"
+    >
+      <!-- Hobby Image -->
+      <img
+        src="https://www.pngkey.com/png/full/124-1240061_death-star-2-png-graphic-death-star-star.png"
+        alt="Hobby"
+        class="w-48 h-48 object-cover rounded-lg"
+      />
+
+      <!-- Hobby Text -->
+      <div class="ml-6 lg:text-left text-gray-900">
+        <h2 class="text-2xl font-bold mb-2">My Hobbies</h2>
+        <p class="font-light text-gray-600">
+          I enjoy Solving Puzzles, reading comics, playing games, coding, and
+          figuring out how the hell do i make this?.<br />
+          I love to read or watch anything about star wars , i love blueberries,
+          i love breads, I almost went crazy learning this.<br />
+          I love to learn things that i think is fun, like what im doing now, i
+          love trying new foods <br />
+          I love uhhh, breads, now that i think about it, the photo above me is
+          to large
+        </p>
+      </div>
+    </section>
+
+    <!--Skills Section-->
+    <section
+      class="max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 flex items-center lg:justify-between"
+    >
+      <!-- skills Text -->
+      <div class="lg:col-span-7 lg:text-left text-gray-900">
+        <h2 class="text-2xl font-bold mb-2 text-left">My Skills</h2>
+        <ul class="font-light text-gray-600 text-left ">
+          <li>Basic Understanding of C++</li>
+          <li>Proficient in English</li>
+          <li>Fluent in Indonesian languange</li>
+          <li>Basic Understanding of Excel</li>
+          <li>Basic Understanding of Web development</li>
+          <li>Connoisseur of Breads</li>
+          <li>Jack of All Trades, Master of None</li>
+
+        </ul>
+      </div>
+
+      <!-- Hobby Image -->
+      <img
+        src="https://www.labreabakery.com/sites/default/files/styles/large/public/2022-06/Italian_Round_clipped_v2-min.png?itok=3E0abYMv"
+        alt="skills"
+        class="h-52 object-cover flex justify-end rounded-lg ml-6"
+      />
+    </section>
+
+    <footer class="bg-gray-100 pt-10">
+      <div
+        class="max-w-7xl mx-auto flex flex-wrap lg:flex-nowrap justify-between px-5 lg:px-10 lg:py-8 gap-8"
+      >
+        <!-- Left Section -->
+        <div class="lg:w-1/4 text-left lg:text-left">
+          <img
+            src="Index/Logos/jiwa-logo.png"
+            alt="janji-jiwa-logo"
+            class="h-10 align-start lg:mx-0 mb-4"
+          />
+          <hr class="border-2 border-lime-500 w-14 align-start lg:mx-0" />
+          <p class="pt-2 text-gray-500">PT Luna Boga Narayan</p>
+          <h3 class="font-bold pt-4 text-green-900">Hubungi Kami</h3>
+          <p class="flex align-start text-gray-500 gap-2">
+            <i class="material-icons text-green-800">mail_outline</i
+            >info@jiwagroup.com
+          </p>
+          <p class="flex align-start items-center text-gray-500 gap-2">
+            <i class="material-icons text-green-800">place</i>
+            Jl. Kedoya Raya No.2 Kota Jakarta Barat, <br />Daerah Khusus Ibukota
+            Jakarta 11520
+          </p>
+          <div class="flex align-start pt-5 gap-20 lg:gap-4">
+            <button
+              class="socmed-button border-2 border-green-700 py-1 px-5 hover:bg-green-700 hover:text-white flex items-center gap-2"
+            >
+              <i class="fa fa-youtube-play"></i>
+              <a href="#">YouTube</a>
+            </button>
+            <button
+              class="socmed-button border-2 border-green-700 py-1 px-5 hover:bg-green-700 hover:text-white flex items-center gap-2"
+            >
+              <i class="fa fa-instagram"></i>
+              <a href="#">Instagram</a>
+            </button>
+          </div>
+        </div>
+
+        <div class="flex justify-between lg:gap-40 gap-16">
+          <!-- Middle Left Section -->
+          <div class="w-full lg:w-1/4 lg:text-left">
+            <ul class="footer-brands">
+              <li class="text-green-900 mb-3 font-bold">BRAND</li>
+              <li class="text-gray-500">Kopi Sejuta Jiwa</li>
+              <li class="text-gray-500">Burger Geber</li>
+              <li class="text-gray-500">Jiwa Tea</li>
+              <li class="text-gray-500">Janji Jiwa</li>
+            </ul>
+          </div>
+
+          <!-- Middle Right Section -->
+          <div class="w-full lg:w-1/4 text-center lg:text-left">
+            <ul class="footer-jiwa+">
+              <li class="text-green-900 mb-3 font-bold">JIWA+</li>
+              <li class="text-gray-500">Download Sekarang</li>
+              <li class="flex justify-center lg:justify-start mt-2 gap-2">
+                <div class="flex flex-col lg:gap-2">
+                  <img
+                    src="Index/index pictures/misc/app-apple.png"
+                    class="h-8"
+                  />
+                  <img
+                    src="Index/index pictures/misc/app-google.png"
+                    class="h-8"
+                  />
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Right Section -->
+        <div class="w-full lg:w-1/4 text-center lg:text-left">
+          <ul class="footer-partnership font-bold">
+            <li class="text-green-900 mb-3">PARTNERSHIP</li>
+            <div
+              class="partnership-border bg-green-800 text-white p-4 rounded-md"
+            >
+              <li class="mb-3 text-sm">
+                Let's become a partner and build the<br />perfect product
+              </li>
+              <li>
+                <button
+                  class="bg-white text-green-900 px-5 py-2 rounded-md border border-green-900 hover:bg-teal-500 hover:text-white transition ease-in-out duration-200"
+                >
+                  Become A Partner
+                </button>
+              </li>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
+    <div class="w-full bg-gray-200 py-5 mt-0">
+      <div
+        class="max-w-7xl mx-auto flex flex-wrap justify-between items-center px-5 lg:px-10 text-sm text-gray-600"
+      >
+        <!-- Copyright Text -->
+        <p class="w-full lg:w-auto text-center lg:text-left mb-4 lg:mb-0">
+          © 2024 Jiwa Group. All rights reserved.
+        </p>
+
+        <!-- University Links -->
+        <div
+          class="w-full lg:w-auto flex flex-col lg:flex-row lg:items-center gap-4 text-center lg:text-left"
+        >
+          <h4 class="font-semibold text-gray-800">Visit Our University:</h4>
+          <ul class="flex flex-col lg:flex-row gap-4">
+            <li>
+              <a
+                href="https://fti.unai.edu/"
+                class="text-green-700 hover:underline"
+                >IT Faculty</a
+              >
+            </li>
+            <li>
+              <a href="https://unai.edu/" class="text-green-700 hover:underline"
+                >University of Advent Indonesia</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://jurnal.unai.edu/index.php/teika"
+                class="text-green-700 hover:underline"
+                >Journal</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
