--- a/biodata.html
+++ b/biodata.html
@@ -325,6 +325,43 @@
         class="h-52 object-cover flex justify-end rounded-lg ml-6"
       />
     </section>
+    <section
+      class="bg-yellow-700 text-gray-100 dark:bg-[#523b35] dark:text-gray-300 pt-28 pb-8"
+    >
+      <div
+        class="max-w-screen-xl mx-auto px-4 lg:px-12 grid lg:grid-cols-12 gap-8 items-center"
+      >
+        <!-- Left Content -->
+        <div class="lg:col-span-7">
+          <h1 class="text-4xl md:text-5xl font-bold mb-4">
+           Testimonial!
+          </h1>
+          <p class="text-lg md:text-xl font-light mb-6">
+            First of All, I love this class so much, the<span class="font-bold"> thrill of the deadlines</span>, the<span class="font-bold"> challenging assignments</span>
+            the <span class="font-bold">games during classes</span>, all of that makes learning so much  <span class="font-bold">fun</span>, i have never had so much fun learning, 
+            heck, i have NEVER knew learning could be this fun, the rules about <span class="font-bold">speaking english in class</span> is also 
+            fun too, never had that outside of english class before! <span class="font-bold">the lecturer is awesome too</span>, although
+            the <span class="font-bold">5 minutes late rule is ridicilous >:(</span>, and then came the final project, i still cant put my head around 
+            this things called <span class="font-bold">"Responsiveness"</span>, for a few days <span class="font-bold">i hated it</span>, it is not just that it is hard to imply
+            the Responsiveness but the website that im cloning is a <span class="font-bold">multi billionare corporate</span> who has a team dedicated
+            to design a website with each person have a minimum of 5 years exprience while im just an Undergraduate student
+            <span class="font-bold">I ALMOST WENT CRAZY!!</span>, i learnt many new usefull and valuable skills, 
+            like how to configure out  <span class="font-bold"></span>css,  <span class="font-bold"></span>using tailwind,  <span class="font-bold"></span>git, although i still dont understand how to implement carousel with javascript i spent numerous hours, back and forth with google and chatgpt to configure this anomaly called carousel, <br>I HATE CAROUSEL I HATE CAROUSEL I HATE CAROUSEL  I HATE CAROUSEL <br>
+            sorry for the rant, and <br>
+            Thanks sir. Andrew.
+          </p>
+          
+        </div>
+        <!-- Right Image -->
+        <div class="lg:col-span-5">
+          <img
+            src="Index\pictures\WhatsApp Image 2024-12-09 at 22.51.52_3f8fa222.jpg"
+            alt="A picture of myself"
+            class="rounded-lg shadow-md w-full"
+          />
+        </div>
+      </div>
+    </section>
 
     <footer class="bg-gray-100 pt-10">
       <div
