added some finishing touches to the post.html

--- a/posts.html
+++ b/posts.html
@@ -21,7 +21,7 @@
     />
   </head>
 
-  <body class="bg-gray-100 min-h-screen flex flex-col items-center p-6">
+  <body class="bg-gray-100 flex flex-col items-center ">
     <header
       class="fixed top-0 left-0 w-full bg-white/90 backdrop-blur-md text-green-900 flex lg:flex-row justify-center px-4 lg:px-12 items-center z-50"
       style="font-family: Gabarito, sans-serif"
@@ -286,7 +286,7 @@
           </div>
         </div>
 
-        <div class="flex justify-between lg:gap-40 gap-16">
+        <div class="flex justify-around lg:gap-40 gap-16 lg:w-full">
           <!-- Middle Left Section -->
           <div class="w-full lg:w-1/4 lg:text-left">
             <ul class="footer-brands">
