--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 
         <div class="flex lg:gap-40 gap-20">
           <!-- Middle Left Section -->
-          <div class="w-full lg:w-1/4 lg:text-left">
+          <div class="w-full lg:w-full lg:text-left">
             <ul class="footer-brands">
               <li class="text-green-900 mb-3 font-bold">BRAND</li>
               <li class="text-gray-500">Kopi Sejuta Jiwa</li>
@@ -856,7 +856,7 @@
           </div>
 
           <!-- Middle Right Section -->
-          <div class="w-full lg:w-1/4 text-center lg:text-left">
+          <div class="w-full lg:w-full text-center lg:text-left">
             <ul class="footer-jiwa+">
               <li class="text-green-900 mb-3 font-bold">JIWA+</li>
               <li class="text-gray-500">Download Sekarang</li>
