polished all the... things

--- a/biodata.html
+++ b/biodata.html
@@ -301,12 +301,12 @@
 
     <!--Skills Section-->
     <section
-      class="max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 flex items-center lg:justify-between"
+      class="max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 flex items-center lg:justify-end"
     >
       <!-- skills Text -->
       <div class="lg:col-span-7 lg:text-left text-gray-900">
-        <h2 class="text-2xl font-bold mb-2 text-left">My Skills</h2>
-        <ul class="font-light text-gray-600 text-left ">
+        <h2 class="text-2xl font-bold mb-2 lg:text-right">My Skills</h2>
+        <ul class="font-light text-gray-600 text-left lg:text-right">
           <li>Basic Understanding of C++</li>
           <li>Proficient in English</li>
           <li>Fluent in Indonesian languange</li>
@@ -314,7 +314,6 @@
           <li>Basic Understanding of Web development</li>
           <li>Connoisseur of Breads</li>
           <li>Jack of All Trades, Master of None</li>
-
         </ul>
       </div>
 
@@ -333,24 +332,30 @@
       >
         <!-- Left Content -->
         <div class="lg:col-span-7">
-          <h1 class="text-4xl md:text-5xl font-bold mb-4">
-           Testimonial!
-          </h1>
+          <h1 class="text-4xl md:text-5xl font-bold mb-4">Testimonial!</h1>
           <p class="text-lg md:text-xl font-light mb-6">
-            First of All, I love this class so much, the<span class="font-bold"> thrill of the deadlines</span>, the<span class="font-bold"> challenging assignments</span>
-            the <span class="font-bold">games during classes</span>, all of that makes learning so much  <span class="font-bold">fun</span>, i have never had so much fun learning, 
-            heck, i have NEVER knew learning could be this fun, the rules about <span class="font-bold">speaking english in class</span> is also 
-            fun too, never had that outside of english class before! <span class="font-bold">the lecturer is awesome too</span>, although
-            the <span class="font-bold">5 minutes late rule is ridicilous >:(</span>, and then came the final project, i still cant put my head around 
-            this things called <span class="font-bold">"Responsiveness"</span>, for a few days <span class="font-bold">i hated it</span>, it is not just that it is hard to imply
-            the Responsiveness but the website that im cloning is a <span class="font-bold">multi billionare corporate</span> who has a team dedicated
-            to design a website with each person have a minimum of 5 years exprience while im just an Undergraduate student
-            <span class="font-bold">I ALMOST WENT CRAZY!!</span>, i learnt many new usefull and valuable skills, 
-            like how to configure out  <span class="font-bold"></span>css,  <span class="font-bold"></span>using tailwind,  <span class="font-bold"></span>git, although i still dont understand how to implement carousel with javascript i spent numerous hours, back and forth with google and chatgpt to configure this anomaly called carousel, <br>I HATE CAROUSEL I HATE CAROUSEL I HATE CAROUSEL  I HATE CAROUSEL <br>
-            sorry for the rant, and <br>
-            Thanks sir. Andrew.
+            First of all, I love this class so much! The thrill of deadlines,
+            the challenging assignments, and the games during classes — all of
+            that makes learning so much fun. I’ve never had so much fun
+            learning, and I never knew learning could be this enjoyable. The
+            rules about speaking English in class are also fun — I’ve never
+            experienced that outside of an English class before! The lecturer is
+            awesome too, although the five-minute-late rule is ridiculous >:(.
+            Then came the final project. I still can’t wrap my head around this
+            thing called "Responsiveness." For a few days, I hated it. It wasn’t
+            just difficult to implement responsiveness, but the website I was
+            cloning belonged to a multi-billion-dollar corporation. They have an
+            entire team dedicated to designing their website, with each person
+            having a minimum of five years of experience. Meanwhile, I’m just an
+            undergraduate student! I almost went crazy! But despite everything,
+            I learned many new, useful, and valuable skills. I now know how to
+            configure CSS, use Tailwind, and work with Git. However, I still
+            don’t understand how to implement a carousel with JavaScript. I
+            spent countless hours back and forth with Google and ChatGPT trying
+            to figure out this anomaly called the carousel. I HATE CAROUSEL! I
+            HATE CAROUSEL! I HATE CAROUSEL! I HATE CAROUSEL! Sorry for the rant,
+            but I wanted to share my experience. Thanks, Sir Andrew!
           </p>
-          
         </div>
         <!-- Right Image -->
         <div class="lg:col-span-5">
@@ -404,7 +409,7 @@
 
         <div class="flex justify-between lg:gap-40 gap-16">
           <!-- Middle Left Section -->
-          <div class="w-full lg:w-1/4 lg:text-left">
+          <div class="w-full lg:w-full lg:text-left">
             <ul class="footer-brands">
               <li class="text-green-900 mb-3 font-bold">BRAND</li>
               <li class="text-gray-500">Kopi Sejuta Jiwa</li>
@@ -415,7 +420,7 @@
           </div>
 
           <!-- Middle Right Section -->
-          <div class="w-full lg:w-1/4 text-center lg:text-left">
+          <div class="w-full lg:w-full text-center lg:text-left">
             <ul class="footer-jiwa+">
               <li class="text-green-900 mb-3 font-bold">JIWA+</li>
               <li class="text-gray-500">Download Sekarang</li>
