--- a/posts.html
+++ b/posts.html
@@ -288,7 +288,7 @@
 
         <div class="flex justify-around lg:gap-40 gap-16 lg:w-full">
           <!-- Middle Left Section -->
-          <div class="w-full lg:w-1/4 lg:text-left">
+          <div class="w-full lg:w-full lg:text-left">
             <ul class="footer-brands">
               <li class="text-green-900 mb-3 font-bold">BRAND</li>
               <li class="text-gray-500">Kopi Sejuta Jiwa</li>
@@ -299,7 +299,7 @@
           </div>
 
           <!-- Middle Right Section -->
-          <div class="w-full lg:w-1/4 text-center lg:text-left">
+          <div class="w-full lg:w-full text-center lg:text-left">
             <ul class="footer-jiwa+">
               <li class="text-green-900 mb-3 font-bold">JIWA+</li>
               <li class="text-gray-500">Download Sekarang</li>
