--- a/posts.html
+++ b/posts.html
@@ -21,7 +21,7 @@
     />
   </head>
 
-  <body class="bg-gray-100 flex flex-col items-center ">
+  <body class="bg-gray-100 flex flex-col items-center">
     <header
       class="fixed top-0 left-0 w-full bg-white/90 backdrop-blur-md text-green-900 flex lg:flex-row justify-center px-4 lg:px-12 items-center z-50"
       style="font-family: Gabarito, sans-serif"
@@ -226,10 +226,10 @@
             </li>
             <li>
               <a
-                href="free_content\freepage.html"
+                href="freepage.html"
                 class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
               >
-                Free Content
+                Free Page
               </a>
             </li>
           </ul>
@@ -415,5 +415,6 @@
 
       getData();
     </script>
+    <script src="posts-script.js"></script>
   </body>
 </html>
