--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
             </li>
             <li>
               <a
-                href="free_content\freepage.html"
+                href="freepage.html"
                 class="block text-gray-700 hover:bg-teal-50 hover:text-teal-600 px-4 py-2 rounded-md transition duration-150"
               >
-                Free Content
+                Free Page
               </a>
             </li>
           </ul>
