adjusting a few minor mistakes

--- a/freepage.html
+++ b/freepage.html
@@ -228,7 +228,7 @@
     </div>
 
 
-    <div class="musics">   
+    <div class="musics pb-10">   
     <div class="main-container flex flex-col lg:flex-row h-[1000px] ">
         <div class="image-preview">
 
@@ -300,14 +300,14 @@
     </div>
 </div>
 
-<div class="container mx-auto p-4 bg-white w-full">
+<div class=" mx-auto p-8 bg-white w-full" >
     <h1 class="text-2xl font-bold text-center mb-6 text-black">Some of My Favorite Books</h1>
 
     <!-- Norse Mythology Section -->
     <div class="flex flex-col md:flex-row items-center md:items-start mb-8">
         <img src="Index/pictures/Favorite Pictures/snapedit_1729671501409.png" 
              alt="Norse Mythology" 
-             class="h-[300px] md:w-1/3 rounded-lg  ">
+             class="h-[300px] md:w-[350px] rounded-lg  ">
         <div class="md:ml-6 mt-4 md:mt-0">
             <h2 class="text-xl font-semibold text-black">Norse Mythology</h2>
             <h3 class="text-left text-gray-600">Neil Gaiman</h3>
@@ -335,14 +335,14 @@
         </div>
         <img src="Index/pictures/Favorite Pictures/bible.png" 
         alt="The Holy Bible" 
-        class="h-[300px] md:w-1/3 rounded-lg ">
+        class="h-[300px]  md:w-[350px] rounded-lg ">
     </div>
 
     <!-- Origins Section -->
     <div class="flex flex-col md:flex-row items-start">
         <img src="Index/pictures/Favorite Pictures/origins.png" 
              alt="Origins" 
-             class="h-[300px]  rounded-lg ">
+             class="h-[300px]   rounded-lg ">
         <div class="md:ml-6 mt-4 md:mb-0">
             <h2 class="text-xl font-semibold text-black">Origins</h2>
             <h3 class="text-gray-600">Lewis Dartnell</h3>
@@ -467,14 +467,14 @@
               </div>
       
               <!-- Right Section -->
-              <div class="w-full lg:w-1/4 text-center lg:text-left">
+              <div class="w-1/2 text-center lg:text-left">
                 <ul class="footer-partnership font-bold">
                   <li class="text-green-900 mb-3">PARTNERSHIP</li>
                   <div
                     class="partnership-border bg-green-800 text-white p-4 rounded-md"
                   >
-                    <li class="mb-3 text-sm">
-                      Let's become a partner and build the<br />perfect product
+                    <li class="mb-3 text-sm w-full">
+                      Let's become a partner and build the perfect product
                     </li>
                     <li>
                       <button
